# Wallet-Pass

./: .env.example  .gitignore  DEPLOYMENT_GUIDE.md  README.md  api_client.py  apple_wallet_logs.txt  clean_test_push.py  configs.py  debug_class_Manchester_United.json  delet_passes.py  docker-commands.md  docker-compose.yml  exceptions.py  final_proper_notification_test.py  google_wallet_parser.py  json_templates.py  main.py  pyproject.toml  start_all.bat  start_all.sh  start_tunnels.sh  test_cert.py  test_wallet_service_filter.py  verify_passes_logic.py  wallet-pass-476608-e7bc0f55b858.json  wallet_service.py
alembic/: env.py
api/: API_README.md  README.md  __init__.py  api.py  models.py  test_api.py
core/: README.md  __init__.py  field_schemas.py  google_wallet_parser.py  json_templates.py  qr_generator.py
database/: README.md  __init__.py  add_class_json_column.py  add_content_fields.py  add_issuer_name.py  db_manager.py  init_db.py  models.py  schema.sql  sync_from_google.py
i18n/: translations.py
models/: README.md  __init__.py  notifications.py  passes.py
services/: README.md  __init__.py  api_client.py  apple_wallet_service.py  class_update_service.py  google_wallet_service.py
state/: README.md  __init__.py  app_state.py  apple_state.py  google_state.py
templates/: scan_landing.html
ui/: README.md  __init__.py  apple_template_builder_view.py  class_builder.py  pass_generator.py  theme.py
utils/: README.md  __init__.py  db_backup_tool.py  formatting.py  validation.py
views/: README.md  __init__.py  apple_generator_view.py  manage_passes_view.py  (+8 more)
(+29 files in other folders)
