
[project]
name = "walletpassesapp"
version = "0.1.0"
description = "This Desktop Application is to show the Classes and the Objects of the passes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flet[all]>=0.28.3",
    "google-api-python-client>=2.187.0",
    "google-auth>=2.43.0",
    "google-auth-httplib2>=0.2.1",
    "google-auth-oauthlib>=1.2.2",
]
